Add peek example.